# jade-gui

./: .gitignore  PKGBUILD  README.md  al.getcryst.jadegui.json  al.getcryst.jadegui.yml  al.getcyrst.jadegui.json  build.sh  jadegui.flatpak  jadegui.install  meson.build
.github/workflows/: build.yml
data/: al.getcryst.jadegui.appdata.xml.in  al.getcryst.jadegui.desktop.in  al.getcryst.jadegui.gschema.xml  al.getcyrst.jadegui.appdata.xml.in  al.getcyrst.jadegui.desktop.in  al.getcyrst.jadegui.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  de.po  es.po  jade_gui.pot  meson.build  pl.po  sv.po
src/: about.ui  desktops.py  jade_gui.gresource.xml  jade_gui.in  keymaps.py  main.py  manualpartitioning.py  meson.build  resources.gresource.xml  window.blp  window.py  window.ui
src/classes/: install_prefs.py  keymap.py  locale.py  meson.build  partition.py
src/functions/: desktop_screen.py  finished_screen.py  install_screen.py  keyboard_screen.py  language_screen.py  manual_partitioning.py  meson.build  misc_screen.py  partition_screen.py  summary_screen.py  timezone_screen.py  user_screen.py
src/gtk/: help-overlay.ui
src/locales/: africa.py  america.py  antarctica.py  arctic.py  asia.py  atlantic.py  australia.py  brazil.py  canada.py  chile.py  europe.py  indian.py  locales_list.py  meson.build  mexico.py  pacific.py
src/pages/: desktop_screen.blp  desktop_screen.ui  finished_screen.blp  finished_screen.ui  install_screen.blp  install_screen.ui  keyboard_screen.blp  keyboard_screen.ui  language_screen.ui  manual_partitioning.ui  misc_screen.blp  misc_screen.ui  partition_screen.blp  partition_screen.ui  summary_screen.blp  summary_screen.ui  timezone_screen.blp  timezone_screen.ui  user_screen.blp  user_screen.ui
src/scripts/: checkEFI.sh  getDiskName.sh  getDiskSize.sh  getDiskType.sh  getDisks.sh  getPartitions.sh  install.sh  meson.build  openBash.sh  openGparted.sh  reboot.sh  savePrefs.sh
src/utils/: command.py  disks.py  meson.build  threading.py
src/widgets/: desktop.blp  desktop.py  desktop.ui  disk.blp  disk.py  disk.ui  layout.blp  layout.py  layout.ui  meson.build  partition.py  partition.ui  timezone.blp  timezone.py  timezone.ui  variant.blp  variant.py  variant.ui
